remove primitive wrappers constructor usages
Signed-off-by: Nicola Isotta <nicola.isotta@gmail.com>