@@ -64,7 +64,7 @@ public class AS400Bin8 implements AS400DataType
      **/
     public Object getDefaultValue()
     {
-	return new Long(defaultValue);
+	return Long.valueOf(defaultValue);
     }
 
     /**
@@ -194,7 +194,7 @@ public class AS400Bin8 implements AS400DataType
     public Object toObject(byte[] as400Value)
     {
         // BinaryConverter will throw the ArrayIndexException's
-	return new Long(BinaryConverter.byteArrayToLong(as400Value, 0));
+	return Long.valueOf(BinaryConverter.byteArrayToLong(as400Value, 0));
     }
 
     /**
@@ -206,6 +206,6 @@ public class AS400Bin8 implements AS400DataType
     public Object toObject(byte[] as400Value, int offset)
     {
         // BinaryConverter will throw the ArrayIndexException's
-	return new Long(BinaryConverter.byteArrayToLong(as400Value, offset));
+	return Long.valueOf(BinaryConverter.byteArrayToLong(as400Value, offset));
     }
 }
