@@ -49,7 +49,7 @@ class AS400ImplProxy extends AbstractProxyImpl implements AS400Impl
     {
         try
         {
-            return (String)connection_.callMethod(pxId_, "ccsidToEncoding", new Class[] { Integer.TYPE }, new Object[] { new Integer(ccsid) }).getReturnValue();
+            return (String)connection_.callMethod(pxId_, "ccsidToEncoding", new Class[] { Integer.TYPE }, new Object[] { Integer.valueOf(ccsid) }).getReturnValue();
         }
         catch (InvocationTargetException e)
         {
@@ -81,7 +81,7 @@ class AS400ImplProxy extends AbstractProxyImpl implements AS400Impl
         {
             connection_.callMethod(pxId_, "connect", 
                 new Class[] { Integer.TYPE, Integer.TYPE, Boolean.TYPE }, 
-                new Object[] { new Integer(service), new Integer(overridePort), Boolean.valueOf(skipSignonServer) });
+                new Object[] { Integer.valueOf(service), Integer.valueOf(overridePort), Boolean.valueOf(skipSignonServer) });
         }
         catch (InvocationTargetException e)
         {
@@ -94,7 +94,7 @@ class AS400ImplProxy extends AbstractProxyImpl implements AS400Impl
     {
         try
         {
-            return (Socket)connection_.callMethod(pxId_, "connectToPort", new Class[] { Integer.TYPE }, new Object[] { new Integer(port) }).getReturnValue();
+            return (Socket)connection_.callMethod(pxId_, "connectToPort", new Class[] { Integer.TYPE }, new Object[] { Integer.valueOf(port) }).getReturnValue();
         }
         catch (InvocationTargetException e)
         {
@@ -109,7 +109,7 @@ class AS400ImplProxy extends AbstractProxyImpl implements AS400Impl
             return (Socket)connection_.callMethod(pxId_, 
                 "connectToPort", 
                 new Class[] { Integer.TYPE, Boolean.TYPE }, 
-                new Object[] { new Integer(port), Boolean.valueOf(forceNonLocalhost) }).getReturnValue();
+                new Object[] { Integer.valueOf(port), Boolean.valueOf(forceNonLocalhost) }).getReturnValue();
         }
         catch (InvocationTargetException e)
         {
@@ -122,7 +122,7 @@ class AS400ImplProxy extends AbstractProxyImpl implements AS400Impl
     {
         try
         {
-            connection_.callMethod(pxId_, "disconnect", new Class[] { Integer.TYPE }, new Object[] { new Integer(service) });
+            connection_.callMethod(pxId_, "disconnect", new Class[] { Integer.TYPE }, new Object[] { Integer.valueOf(service) });
         }
         catch (InvocationTargetException e)
         {
@@ -194,7 +194,7 @@ class AS400ImplProxy extends AbstractProxyImpl implements AS400Impl
     {
         try
         {
-            return (String[])connection_.callMethod(pxId_, "getJobs", new Class[] { Integer.TYPE }, new Object[] { new Integer(service) }).getReturnValue();
+            return (String[])connection_.callMethod(pxId_, "getJobs", new Class[] { Integer.TYPE }, new Object[] { Integer.valueOf(service) }).getReturnValue();
         }
         catch (InvocationTargetException e)
         {
@@ -207,7 +207,7 @@ class AS400ImplProxy extends AbstractProxyImpl implements AS400Impl
     {
         try
         {
-            return connection_.callMethod(pxId_, "getServicePort", new Class[] { String.class, Integer.TYPE }, new Object[] { systemName, new Integer(service) }).getReturnValueInt();
+            return connection_.callMethod(pxId_, "getServicePort", new Class[] { String.class, Integer.TYPE }, new Object[] { systemName, Integer.valueOf(service) }).getReturnValueInt();
         }
         catch (InvocationTargetException e)
         {
@@ -220,7 +220,7 @@ class AS400ImplProxy extends AbstractProxyImpl implements AS400Impl
     {
         try
         {
-            return connection_.callMethod(pxId_, "isConnected", new Class[] { Integer.TYPE }, new Object[] { new Integer(service) }).getReturnValueBoolean();
+            return connection_.callMethod(pxId_, "isConnected", new Class[] { Integer.TYPE }, new Object[] { Integer.valueOf(service) }).getReturnValueBoolean();
         }
         catch (InvocationTargetException e)
         {
@@ -244,7 +244,7 @@ class AS400ImplProxy extends AbstractProxyImpl implements AS400Impl
     {
         try
         {
-            return connection_.callMethod(pxId_, "isConnectionAlive", new Class[] { Integer.TYPE }, new Object[] { new Integer(service) }).getReturnValueBoolean();
+            return connection_.callMethod(pxId_, "isConnectionAlive", new Class[] { Integer.TYPE }, new Object[] { Integer.valueOf(service) }).getReturnValueBoolean();
         }
         catch (InvocationTargetException e)
         {
@@ -257,7 +257,7 @@ class AS400ImplProxy extends AbstractProxyImpl implements AS400Impl
     {
         try
         {
-            connection_.callMethod(pxId_, "newConverter", new Class[] { Integer.TYPE }, new Object[] { new Integer(ccsid) });
+            connection_.callMethod(pxId_, "newConverter", new Class[] { Integer.TYPE }, new Object[] { Integer.valueOf(ccsid) });
         }
         catch (InvocationTargetException e)
         {
@@ -294,7 +294,7 @@ class AS400ImplProxy extends AbstractProxyImpl implements AS400Impl
     {
         try
         {
-            connection_.callMethod(pxId_, "setServicePort", new Class[] { String.class, Integer.TYPE, Integer.TYPE }, new Object[] { systemName, new Integer(service), new Integer(port) });
+            connection_.callMethod(pxId_, "setServicePort", new Class[] { String.class, Integer.TYPE, Integer.TYPE }, new Object[] { systemName, Integer.valueOf(service), Integer.valueOf(port) });
         }
         catch (InvocationTargetException e)
         {
@@ -320,7 +320,7 @@ class AS400ImplProxy extends AbstractProxyImpl implements AS400Impl
     {
         try
         {
-            connection_.callMethod(pxId_, "setState", new Class[] { SSLOptions.class, Boolean.TYPE, Boolean.TYPE, Integer.TYPE, String.class, SocketProperties.class, String.class, Boolean.TYPE, Boolean.TYPE, Boolean.TYPE }, new Object[] { useSSLConnection, Boolean.valueOf(canUseNativeOptimization), Boolean.valueOf(threadUsed), new Integer(ccsid), nlv, socketProperties, ddmRDB, Boolean.valueOf(mustUseNetSockets), Boolean.valueOf(mustUseSuppliedProfile), Boolean.valueOf(mustAddLanguageLibrary) } );
+            connection_.callMethod(pxId_, "setState", new Class[] { SSLOptions.class, Boolean.TYPE, Boolean.TYPE, Integer.TYPE, String.class, SocketProperties.class, String.class, Boolean.TYPE, Boolean.TYPE, Boolean.TYPE }, new Object[] { useSSLConnection, Boolean.valueOf(canUseNativeOptimization), Boolean.valueOf(threadUsed), Integer.valueOf(ccsid), nlv, socketProperties, ddmRDB, Boolean.valueOf(mustUseNetSockets), Boolean.valueOf(mustUseSuppliedProfile), Boolean.valueOf(mustAddLanguageLibrary) } );
         }
         catch (InvocationTargetException e)
         {
