@@ -450,7 +450,7 @@ implements IFSFileImpl
     try {
       return (IFSCachedAttributes[]) connection_.callMethod (pxId_, "listDirectoryDetails",
                               new Class[] { String.class, String.class, Integer.TYPE, String.class },     // @D4C
-                              new Object[] { directoryPattern, directoryPath, new Integer(maxGetCount), restartName })    // @D4C
+                              new Object[] { directoryPattern, directoryPath, Integer.valueOf(maxGetCount), restartName })    // @D4C
         .getReturnValue();
     }
     catch (InvocationTargetException e) {
@@ -470,7 +470,7 @@ implements IFSFileImpl
     try {
       return (IFSCachedAttributes[]) connection_.callMethod (pxId_, "listDirectoryDetails",
                               new Class[] { String.class, String.class, Integer.TYPE, byte[].class, Boolean.TYPE },
-                              new Object[] { directoryPattern, directoryPath, new Integer(maxGetCount), restartID, Boolean.valueOf(allowSortedRequests) })//@D7C
+                              new Object[] { directoryPattern, directoryPath, Integer.valueOf(maxGetCount), restartID, Boolean.valueOf(allowSortedRequests) })//@D7C
         .getReturnValue();
     }
     catch (InvocationTargetException e) {
@@ -564,7 +564,7 @@ implements IFSFileImpl
     try {
       return connection_.callMethod (pxId_, "setAccess",
                                      new Class[] { Integer.TYPE, Boolean.TYPE, Boolean.TYPE },
-                                     new Object[] { new Integer(accessType), Boolean.valueOf(enableAccess), Boolean.valueOf(ownerOnly) })
+                                     new Object[] { Integer.valueOf(accessType), Boolean.valueOf(enableAccess), Boolean.valueOf(ownerOnly) })
         .getReturnValueBoolean();
     }
     catch (InvocationTargetException e) {
@@ -578,7 +578,7 @@ implements IFSFileImpl
     try {
       return connection_.callMethod (pxId_, "setCCSID",
                                      new Class[] { Integer.TYPE },
-                                     new Object[] { new Integer(ccsid) })
+                                     new Object[] { Integer.valueOf(ccsid) })
         .getReturnValueBoolean();
     }
     catch (InvocationTargetException e) {
@@ -594,7 +594,7 @@ implements IFSFileImpl
     try {
       return connection_.callMethod (pxId_, "setFixedAttributes",
                                      new Class[] { Integer.TYPE },
-                                     new Object[] { new Integer(attributes) })
+                                     new Object[] { Integer.valueOf(attributes) })
         .getReturnValueBoolean();
     }
     catch (InvocationTargetException e) {
@@ -623,7 +623,7 @@ implements IFSFileImpl
     try {
       return connection_.callMethod (pxId_, "setLastModified",
                                      new Class[] { Long.TYPE },
-                                     new Object[] { new Long(time) })
+                                     new Object[] { Long.valueOf(time)})
         .getReturnValueBoolean();
     }
     catch (InvocationTargetException e) {
@@ -638,7 +638,7 @@ implements IFSFileImpl
     try {
       return connection_.callMethod (pxId_, "setLength",
                                      new Class[] { Integer.TYPE },
-                                     new Object[] { new Integer(length) })
+                                     new Object[] { Integer.valueOf(length) })
         .getReturnValueBoolean();
     }
     catch (InvocationTargetException e) {
@@ -651,7 +651,7 @@ implements IFSFileImpl
     try {
       connection_.callMethod (pxId_, "setPatternMatching",
                               new Class[] { Integer.TYPE },
-                              new Object[] { new Integer(patternMatching) });
+                              new Object[] { Integer.valueOf(patternMatching) });
     }
     catch (InvocationTargetException e) {
       throw ProxyClientConnection.rethrow (e);
