@@ -76,8 +76,8 @@ implements Clob
     try {
       return (String) connection_.callMethod (pxId_, "getSubString",
                                new Class[] { Long.TYPE, Integer.TYPE },
-                               new Object[] { new Long (start),
-                                              new Integer (length) })
+                               new Object[] { Long.valueOf(start),
+                                              Integer.valueOf(length) })
                          .getReturnValue();
     }
     catch (InvocationTargetException e) {
@@ -103,7 +103,7 @@ implements Clob
     try {
       return connection_.callMethod (pxId_, "position",
                                new Class[] { String.class, Long.TYPE },
-                               new Object[] { pattern, new Long (start) })
+                               new Object[] { pattern, Long.valueOf(start) })
                              .getReturnValueLong ();
     }
     catch (InvocationTargetException e) {
@@ -117,7 +117,7 @@ implements Clob
     try {
       return connection_.callMethod (pxId_, "position",
                                new Class[] { Clob.class, Long.TYPE },
-                               new Object[] { pattern, new Long (start) })
+                               new Object[] { pattern, Long.valueOf(start) })
                              .getReturnValueLong ();
     }
     catch (InvocationTargetException e) {
@@ -139,7 +139,7 @@ implements Clob
             JDOutputStreamProxy newStream = new JDOutputStreamProxy ();
             return (JDOutputStreamProxy) connection_.callFactoryMethod (pxId_, "setAsciiStream", 
                                                                         new Class[] { Long.TYPE},
-                                                                        new Object[] { new Long(pos)},
+                                                                        new Object[] { Long.valueOf(pos)},
                                                                         newStream);
         }
         catch (InvocationTargetException e) {
@@ -161,7 +161,7 @@ implements Clob
             JDWriterProxy newWriter = new JDWriterProxy ();
             return (JDWriterProxy) connection_.callFactoryMethod (pxId_, "setCharacterStream", 
                                                                         new Class[] { Long.TYPE},
-                                                                        new Object[] { new Long(pos)},
+                                                                        new Object[] { Long.valueOf(pos)},
                                                                         newWriter);
         }
         catch (InvocationTargetException e) {
@@ -177,7 +177,7 @@ implements Clob
         try {
             return connection_.callMethod (pxId_, "setString",
                                            new Class[] { Long.TYPE, String.class},
-                                           new Object[] { new Long(pos), str})
+                                           new Object[] { Long.valueOf(pos), str})
             .getReturnValueInt ();
         }
         catch (InvocationTargetException e) {
@@ -193,7 +193,7 @@ implements Clob
         try {
             return connection_.callMethod (pxId_, "setString",
                                            new Class[] { Long.TYPE, String.class, Integer.TYPE, Integer.TYPE},
-                                           new Object[] { new Long(pos), str, new Integer(offset), new Integer(len)})
+                                           new Object[] { Long.valueOf(pos), str, Integer.valueOf(offset), Integer.valueOf(len)})
             .getReturnValueInt ();
         }
         catch (InvocationTargetException e) {
@@ -209,7 +209,7 @@ implements Clob
         try {
             connection_.callMethod (pxId_, "truncate",
                                     new Class[] { Long.TYPE,},
-                                    new Object[] { new Long(len)} );
+                                    new Object[] { Long.valueOf(len)} );
         }
         catch (InvocationTargetException e) {
             throw JDConnectionProxy.rethrow1 (e);
@@ -236,7 +236,7 @@ implements Clob
             return (JDReaderProxy) connection_.callFactoryMethod (
                     pxId_, "getCharacterStream",
                     new Class[] { Long.TYPE, Long.TYPE},
-                    new Object[] { new Long(pos),  new Long(length)},
+                    new Object[] { Long.valueOf(pos),  Long.valueOf(length)},
                     newReader);
         }
         catch (InvocationTargetException e) {
