@@ -431,7 +431,7 @@ public abstract class SQLDataBase implements SQLData
         try
         {
             //return(new Double(value_.trim())).byteValue();  //@trunc
-            Double doubleValue  = new Double (getString().trim ());              //@trunc
+            Double doubleValue  = Double.valueOf(getString().trim ());      //@trunc
             double d = doubleValue.doubleValue();                           //@trunc
             if(d > Byte.MAX_VALUE || d < Byte.MIN_VALUE) {                  //@trunc
                 truncated_ = 1;                                             //@trunc
@@ -521,7 +521,7 @@ public abstract class SQLDataBase implements SQLData
 
         try
         {
-            return(new Double(getString().trim())).doubleValue();
+            return Double.parseDouble(getString().trim());
         }
         catch(NumberFormatException e)
         {
@@ -544,7 +544,7 @@ public abstract class SQLDataBase implements SQLData
 
         try
         {
-            return(new Double(getString().trim())).floatValue();
+            return(Double.valueOf(getString().trim())).floatValue();
         }
         catch(NumberFormatException e)
         {
@@ -567,7 +567,7 @@ public abstract class SQLDataBase implements SQLData
         try
         {
             //return(new Double(getString().trim())).intValue();   //@trunc
-            Double doubleValue  = new Double (getString().trim ());     //@trunc
+            Double doubleValue  = Double.valueOf(getString().trim ());     //@trunc
             double d = doubleValue.doubleValue();                  //@trunc 
 
             if( d > Integer.MAX_VALUE || d < Integer.MIN_VALUE) {   //@trunc    
@@ -598,7 +598,7 @@ public abstract class SQLDataBase implements SQLData
         try
         {
             //return(new Double(getString().trim())).longValue();  //@trunc
-            Double doubleValue  = new Double (getString().trim ()); //@trunc
+            Double doubleValue  = Double.valueOf(getString().trim ()); //@trunc
             double d = doubleValue.doubleValue();              //@trunc
 
             if( d > Long.MAX_VALUE || d < Long.MIN_VALUE) {     //@trunc
@@ -649,7 +649,7 @@ public abstract class SQLDataBase implements SQLData
         try
         {
             //return(new Double(getString().trim())).shortValue();           //@trunc
-            Double doubleValue  = new Double (getString().trim ());               //@trunc
+            Double doubleValue  = Double.valueOf(getString().trim ());               //@trunc
             double d = doubleValue.doubleValue();                            //@trunc
 
             if( d > Short.MAX_VALUE || d < Short.MIN_VALUE)  {                //@trunc      
