@@ -141,7 +141,7 @@ Applies any changes made by the user.
                         Object value = changes_.get(attributeID);
                         if ((resource_.getAttributeMetaData(attributeID).getType() == Integer.class)    // @A1A
                             && (value  instanceof String))                                              // @A1A
-                            value = new Integer((String)value);                                         // @A1A
+                            value = Integer.valueOf((String)value);                                     // @A1A
                         ((ChangeableResource)resource_).setAttributeValue(attributeID, value);
                     }
                     ((ChangeableResource)resource_).commitAttributeChanges();
